# 5gr-rl

./: .gitignore  CHANGELOG.md  Jenkinsfile  LICENSE  README.md  requirements.txt
rl/plugins/VIM/openstack/vim-manager/: .coveragerc  .gitignore  Dockerfile  Jenkinsfile  LICENSE.rst  MANIFEST.in  PKG-INFO  README.rst  RELEASENOTES.rst  build.sh  config-generator.conf  config.conf  config.conf.exemple  jenkins-job-template.xml  mini-howto.md  package-lock.json  package.json  requirements.txt  setup.cfg  setup.py  sonar-project.properties  test-requirements.txt  third_licenses.md  tox.ini  vim-manager-key  vim-manager-key.pub
rl/plugins/VIM/openstack/vim-manager/doc/source/: api.rst  cli.rst  conf.py  configuration.rst  docker.rst  filter_exemple.rst  (+4 more)
rl/plugins/VIM/openstack/vim-manager/postman/: NetworkResources_postman_collection.json  SoftwareImages_postman_collection.json  UseCase_multi_VIM.postman_collection.json  VirtualisedComputeResources_postman_collection.json  VirtualisedNetworkResourcesInformation_postman_collection.json  VirtualisedResourceQuota_postman_collection.json  VirtualisedResourceReservation_postman_collection.json
rl/plugins/VIM/openstack/vim-manager/tests/: test_compute_resources.py  test_network_resources.py  test_quotas.py  test_software_images.py  vim-manager.conf
rl/plugins/VIM/openstack/vim-manager/vim_manager/: __init__.py  application.py  exception.py  extensions.py  log.py  main.py  version.py  wsgi.py
rl/plugins/VIM/openstack/vim-manager/vim_manager.egg-info/: SOURCES.txt  entry_points.txt  pbr.json  requires.txt  top_level.txt
(+2535 files in other folders)
