[metadata]
name = vim-manager
summary = VIM Manager service
description-file =
    README.rst
author = Christophe Da Silva
author-email = christophe.dasilva@b-com.com
home-page = http://www.b-com.com/
classifier =
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[global]
setup-hooks =
    pbr.hooks.setup_hook

[files]
packages =
    vim_manager

[entry_points]
oslo.config.opts =
    vim_manager = vim_manager.conf.opts:list_opts

console_scripts =
    vim-manager = vim_manager.main:main

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[aliases]
test=pytest

[bdist_wheel]
universal=1
